WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124539
put_to_scope[5] should not point to the structure if it's a variable access, but it should point to the WatchpointSet
https://bugs.webkit.org/show_bug.cgi?id=124539
Summary
put_to_scope[5] should not point to the structure if it's a variable access, ...
Filip Pizlo
Reported
2013-11-18 14:49:45 PST
This is in preparation for
https://bugs.webkit.org/show_bug.cgi?id=124464
.
Attachments
the patch
(9.12 KB, patch)
2013-11-18 14:51 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-11-18 14:51:27 PST
Created
attachment 217238
[details]
the patch
Mark Hahnenberg
Comment 2
2013-11-18 15:12:33 PST
Comment on
attachment 217238
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-11-18 15:17:50 PST
Landed in
http://trac.webkit.org/changeset/159462
Geoffrey Garen
Comment 4
2013-11-18 16:21:16 PST
Comment on
attachment 217238
[details]
the patch r=me too
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug